# app-templates

./: .gitignore  README.md
app-elm/: elm.json  index.html  readme.md
app-elm-graphql/: elm.js  elm.json  index.html  package-lock.json  package.json  readme.md
app-elm-graphql/src/: API.elm  Endpoint.elm  Main.elm
app-elm-graphql/src/Page/: CreateUser.elm  Template.elm  UserDetail.elm  Users.elm
app-elm-graphql/src/UsersAPI/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Union.elm  VerifyScalarCodecs.elm
app-elm-graphql/src/UsersAPI/Object/: User.elm
app-elm-graphql/src/UsersApi/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Union.elm  VerifyScalarCodecs.elm
app-elm-graphql/src/UsersApi/Object/: User.elm
app-elm/src/: API.elm  CreateUser.elm  Endpoint.elm  Main.elm  NotFound.elm  Users.elm
app-elm/src/Page/: CreateUser.elm  NotFound.elm  Template.elm  UserDetail.elm  Users.elm
server-axum/: Cargo.toml  readme.md
server-axum-graphql/: Cargo.toml  readme.md
server-axum-graphql-diesel/: .env  Cargo.toml  docker-compose.yml  readme.md
server-axum-graphql-diesel/migrations/2023-04-24-013538_create_users/: up.sql
server-axum-graphql-diesel/src/: db_models.rs  db_schema.rs  main.rs
server-axum-graphql-diesel/src/model/: mod.rs
server-axum-graphql-diesel/src/routes/: mod.rs
server-axum-graphql/src/: main.rs
server-axum-graphql/src/model/: mod.rs
server-axum-graphql/src/routes/: mod.rs
server-axum/src/: error.rs  main.rs  model.rs
server-axum/src/web/: mod.rs  routes_users.rs
server-axum/tests/: test_1.rs
