[package]
name = "server-axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum = { version = "0.6.16", features = ["headers"] }
diesel = { version = "2.0.4" }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
hyper = "0.14.26"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
# Added slab for model -- Should this be a separate crate?
# ghttps://github.com/async-graphql/examples/blob/master/models/starwars/Cargo.toml
slab = "0.4.8"
tokio = { verion = "1.27.0", features = ["full"] }
# Tower is needed for the middleware we use (in particular, adding shared state)
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["add-extension", "cors"] }
