[package]
name = "server-axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum = { version = "0.6.16", features = ["headers"] }
hyper = "0.14.26"
tokio = { verion = "1.27.0", features = ["macros", "rt-multi-thread"] }
