[package]
name = "server-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
# Tower is needed for the middleware we use (in particular, adding shared state)
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["add-extension"] }
